--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserify-css": "^0.9.2",
     "gulp": "^3.9.1",
     "gulp-file-include": "^0.14.0",
+    "gulp-rename": "^1.2.2",
     "jquery": "^1.12.0",
     "stringify": "^5.1.0",
     "vinyl-buffer": "^1.0.0",
